<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_mycar"
            android:icon="@drawable/ic_menu_mycar"
            android:title="@string/menu_car" />
        <item
            android:id="@+id/nav_service"
            android:icon="@drawable/ic_menu_find"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_notification"
            android:title="@string/menu_notification" />
        <item
            android:id = "@+id/nav_friends"
            android:icon="@drawable/ic_menu_friends"
            android:title = "@string/menu_friends"/>
        <item
            android:id ="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title = "@string/menu_about"/>
    </group>



</menu>
